[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avyra"
dynamic = ["version"]
description = "Lightweight, thread-safe publish-subscribe event bus"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Nytrox"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
keywords = ["event-bus", "pub-sub", "publish-subscribe", "events", "thread-safe"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/Nytrox/avyra"
Repository = "https://github.com/Nytrox/avyra"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
test = ["pytest", "pytest-asyncio"]

[tool.hatch.version]
path = "avyra/version.py"

[tool.hatch.build.targets.wheel]
packages = ["avyra"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
